[tool]
[tool.poetry]
namgie = "pca-archunit/sanic-example"
description = "sanic-example for pca-archunit"
version = "0.0.1"
authors = []

[tool.poetry.dependencies]
python = ">=3.7,<4"
sanic = "^22.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:app"
