[tool]
[tool.poetry]
name = "pca-archunit/sanic-example"
description = "sanic-example for pca-archunit"
version = "0.0.1"
authors = []

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.7,<4"
sanic = "^22.9.0"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:start"
